@@ -4,8 +4,8 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_14
+    targetCompatibility = JavaVersion.VERSION_14
 }
 
 repositories {
@@ -16,10 +16,6 @@ task integrationTest(type: Test)
 task e2eTest(type: Test)
 
 tasks {
-    wrapper {
-        gradleVersion = "6.1.1"
-    }
-
     test {
         useJUnitPlatform {
             excludeTags("integration")
@@ -49,16 +45,26 @@ tasks {
     check.dependsOn(e2eTest)
 }
 
-configurations.all {
-    resolutionStrategy {
-        failOnVersionConflict()
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-preview"
+}
+
+configurations {
+    all {
+        resolutionStrategy {
+            failOnVersionConflict()
+            force("org.codehaus.groovy:groovy:2.5.10") // for JDK14 support in RestAssured 4.2.0
+        }
     }
 }
 
 dependencies {
-    annotationProcessor("org.projectlombok:lombok:1.18.10")
-    compileOnly("org.projectlombok:lombok:1.18.10")
-
     implementation("com.sparkjava:spark-core:2.9.1") {
         exclude(group: "org.eclipse.jetty.websocket", module: "websocket-server")
         exclude(group: "org.eclipse.jetty.websocket", module: "websocket-servlet")
@@ -67,13 +73,13 @@ dependencies {
 
     implementation("org.msgpack:msgpack-core:0.8.20")
 
-    implementation("org.flywaydb:flyway-core:6.2.2")
+    implementation("org.flywaydb:flyway-core:6.3.0")
 
     implementation("ch.qos.logback:logback-classic:1.2.3")
-    implementation("io.micrometer:micrometer-registry-prometheus:1.3.3")
-    implementation("io.zipkin.brave:brave-instrumentation-sparkjava:5.9.1")
-    implementation("io.zipkin.brave:brave-instrumentation-p6spy:5.9.1")
-    implementation("io.zipkin.reporter2:zipkin-sender-urlconnection:2.11.1")
+    implementation("io.micrometer:micrometer-registry-prometheus:1.3.5")
+    implementation("io.zipkin.brave:brave-instrumentation-sparkjava:5.10.1")
+    implementation("io.zipkin.brave:brave-instrumentation-p6spy:5.10.1")
+    implementation("io.zipkin.reporter2:zipkin-sender-urlconnection:2.12.1")
 
     implementation("com.h2database:h2:1.4.200")
     implementation("mysql:mysql-connector-java:8.0.19") {
@@ -85,7 +91,7 @@ dependencies {
     testImplementation("io.rest-assured:rest-assured:4.2.0")
     testImplementation("org.reflections:reflections:0.9.12")
 
-    testImplementation("org.testcontainers:mysql:1.12.5") {
+    testImplementation("org.testcontainers:mysql:1.13.0") {
         exclude(group: "org.slf4j", module: "slf4j-api")
     }
 
